--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
     }
 
     #msg{
-        color:#e2c20a;
+        color:#c49d0f;
         font-size: 10vmin;
         font-family: cursive;
     }
